--- a/src/celery.conf
+++ b/src/celery.conf
@@ -171,7 +171,7 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 
 
 [program:copoceleryworker]
-command=celery -A web worker -P gevent --concurrency 100 -l critical -Q celery
+command=celery -A src worker -P gevent --concurrency 100 -l critical -Q celery
 stdout_logfile = /tmp/celery.log
 redirect_stderr=true
 
@@ -181,6 +181,6 @@ redirect_stderr=true
 ;redirect_stderr=true
 
 [program:copocelerybeat]
-command=celery -A web beat -l critical
+command=celery -A src beat -l critical
 stdout_logfile = /tmp/celerybeat.log
 redirect_stderr=true
