--- a/deployment/copo.compose.yaml
+++ b/deployment/copo.compose.yaml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   web:
-    image: copo/copo-web:v1.11.8.1
+    image: copo/copo-new-web:v1.11.8.1
     volumes:
       - web-data:/copo/media
       - static-data:/copo/static
@@ -252,6 +252,7 @@ services:
           exec docker-entrypoint.sh $$@
     networks:
       - copo-backend-network
+    hostname: copo-mongo-server
     volumes:
       - mongo-data:/data/db
     secrets:
