--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -53,6 +53,18 @@
             "module": "celery",
             "console": "integratedTerminal",
             "args": ["-A", "src", "beat", "-l", "critical"]
-         }    
+         },
+         {
+            "name": "Python: Django Shell",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/manage.py",      
+            "args": [
+                "shell_plus",
+                "--ipython"
+            ],
+            "django": true,
+            "justMyCode": false
+        }, 
     ]
 }
