--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         
         {
             "name": "Python: Django",
@@ -19,7 +20,22 @@
             ],
             "django": true,
             "justMyCode": false
-        },      
+        }, 
+        {
+            "name": "Python: Django Shell",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/manage.py",    
+            "env" : {
+                "PYTHONPATH1" : "${workspaceFolder}/lib:${PYTHONPATH}"
+            },      
+            "args": [
+                "shell_plus",
+                "--ptpython"
+            ],
+            "django": true,
+            "justMyCode": false
+        },     
         {
             "name": "Python: Django makemigration",
             "type": "python",
