--- a/deployment/copo.compose.production.yaml
+++ b/deployment/copo.compose.production.yaml
@@ -66,7 +66,7 @@ services:
       replicas : 1
       endpoint_mode: dnsrr
       restart_policy:
-        condition: on-failure
+        condition: any
       placement:
         constraints:
           - "node.labels.web-service==true"
@@ -164,7 +164,7 @@ services:
       replicas : 1
       endpoint_mode: dnsrr
       restart_policy:
-        condition: on-failure
+        condition: any
       placement:
         constraints:
           - "node.labels.backup-service==true"
@@ -210,7 +210,7 @@ services:
     deploy:
       replicas: 1
       restart_policy:
-        condition: on-failure
+        condition: any
       placement:
         constraints:
           - "node.labels.nginx-service==true"
@@ -252,7 +252,7 @@ services:
       replicas: 1
       endpoint_mode: dnsrr
       restart_policy:
-        condition: on-failure
+        condition: any
       placement:
         constraints:
           - "node.labels.backup-service==true"
@@ -281,7 +281,7 @@ services:
       replicas: 1
       endpoint_mode: dnsrr
       restart_policy:
-        condition: on-failure
+        condition: any
       placement:
         constraints:
           - "node.labels.backup-service==true"
@@ -306,7 +306,7 @@ services:
       replicas: 1
       endpoint_mode: dnsrr
       restart_policy:
-        condition: on-failure
+        condition: any
       placement:
         constraints:
           - "node.labels.web-service==true"
@@ -337,7 +337,7 @@ services:
       replicas: 1
       endpoint_mode: dnsrr
       restart_policy:
-        condition: on-failure
+        condition: any
       placement:
         constraints:
           - "node.labels.postgres-service==true"
@@ -381,7 +381,7 @@ services:
       replicas: 1
       endpoint_mode: dnsrr
       restart_policy:
-        condition: on-failure
+        condition: any
       placement:
         constraints:
           - "node.labels.mongo-service==true"
