--- a/deployment/copo.compose.yaml
+++ b/deployment/copo.compose.yaml
@@ -66,7 +66,7 @@ services:
       replicas: 1
       endpoint_mode: dnsrr
       restart_policy:
-        condition: on-failure
+        condition: any
       placement:
         constraints:
           - "node.labels.web-service==true"
@@ -164,7 +164,7 @@ services:
       replicas: 1
       endpoint_mode: dnsrr
       restart_policy:
-        condition: on-failure
+        condition: any
       placement:
         constraints:
           - "node.labels.backup-service==true"
@@ -210,7 +210,7 @@ services:
     deploy:
       replicas: 1
       restart_policy:
-        condition: on-failure
+        condition: any
       placement:
         constraints:
           - "node.labels.nginx-service==true"
@@ -251,7 +251,7 @@ services:
       replicas: 1
       endpoint_mode: dnsrr
       restart_policy:
-        condition: on-failure
+        condition: any
       placement:
         constraints:
           - "node.labels.backup-service==true"
@@ -280,7 +280,7 @@ services:
       replicas: 1
       endpoint_mode: dnsrr
       restart_policy:
-        condition: on-failure
+        condition: any
       placement:
         constraints:
           - "node.labels.backup-service==true"
@@ -305,7 +305,7 @@ services:
       replicas: 1
       endpoint_mode: dnsrr
       restart_policy:
-        condition: on-failure
+        condition: any
       placement:
         constraints:
           - "node.labels.web-service==true"
@@ -336,7 +336,7 @@ services:
       replicas: 1
       endpoint_mode: dnsrr
       restart_policy:
-        condition: on-failure
+        condition: any
       placement:
         constraints:
           - "node.labels.postgres-service==true"
@@ -380,7 +380,7 @@ services:
       replicas: 1
       endpoint_mode: dnsrr
       restart_policy:
-        condition: on-failure
+        condition: any
       placement:
         constraints:
           - "node.labels.mongo-service==true"
