--- a/deployment/copo.compose.yaml
+++ b/deployment/copo.compose.yaml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: "3.9"
 services:
   web:
     image: copo/copo-new-web:v2.0.0.2
@@ -158,7 +158,6 @@ services:
       - postgres
       - mongo
     networks:
-      - copo-frontend-network
       - copo-backend-network
     deploy:
       replicas: 1
@@ -167,7 +166,7 @@ services:
         condition: any
       placement:
         constraints:
-          - "node.labels.backup-service==true"
+          - "node.labels.offline-service==true"
       resources:
         limits:
           cpus: '2'
@@ -225,7 +224,7 @@ services:
           cpus: "0.3"
           memory: 512mb
   backup:
-    image: copo/copo-backup:v18.04_1
+    image: copo/copo-backup:v20.04_1
     command: >
       bash -c "printenv >> /etc/environment && cron && sleep infinity"    
     networks:
@@ -283,7 +282,7 @@ services:
         condition: any
       placement:
         constraints:
-          - "node.labels.backup-service==true"
+          - "node.labels.offline-service==true"
       update_config:
         parallelism: 1
         delay: 10s
@@ -352,7 +351,7 @@ services:
           memory: 512mb
 
   mongo:
-    image: copo/copo-mongo:v4.4.6_1
+    image: copo/copo-mongo:v7.0.1
     command: mongod --replSet rs0 --bind_ip_all --keyFile /data/replica.key
     entrypoint:
        - bash
