--- a/deployment/copo.compose.production.yaml
+++ b/deployment/copo.compose.production.yaml
@@ -300,7 +300,7 @@ services:
   redis:
     image: copo/copo-redis:redis-v6.2.6.18
     networks:
-      - copo-frontend-network
+      - copo-backend-network
     deploy:
       replicas: 1
       endpoint_mode: dnsrr
