--- a/deployment/nginx/django_project.conf
+++ b/deployment/nginx/django_project.conf
@@ -14,6 +14,8 @@ server {
     charset utf-8;
     ssl_certificate       /run/secrets/copo-project.crt;
     ssl_certificate_key   /run/secrets/copo-project.key;
+    ssl_protocols         TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
     client_max_body_size 0;
     #client_body_buffer_size 700M;
     #upload_max_filesize 0;
