fix the bug on "media" folder for production

--- a/deployment/nginx/django_project.conf
+++ b/deployment/nginx/django_project.conf
@@ -46,6 +46,12 @@ server {
         # limit_conn addr 10;
     }
 
+    location /media {
+        autoindex off;
+        alias /www/media/;
+        # limit_req zone=one;
+        # limit_conn addr 10;
+    }
     location /copo {
         proxy_pass http://$backend;
         proxy_set_header Host $host;
