--- a/deployment/copo.compose.yaml
+++ b/deployment/copo.compose.yaml
@@ -191,11 +191,12 @@ services:
       - copo_bioimage_path
       - ecs_secret_key      
   nginx:
-    image: copo/copo-nginx:1.25.3
+    image: copo/copo-nginx:1.25.3.1
     networks:
       - copo-frontend-network
     volumes:
       - static-data:/www/static
+      - web-data:/copo/media
     secrets:
       - copo-project.crt
       - copo-project.key
