--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
           DEBUG: true
           REDIS_HOST: copo_redis
           REDIS_PORT: 6379
-          WEBIN_USER: /run/secrets/copo_webin_user
+          WEBIN_USER: ${WEBIN_USER}
           WEBIN_USER_PASSWORD: /run/secrets/copo_webin_user_password
           ENA_SERVICE: https://wwwdev.ebi.ac.uk/ena/submit/drop-box/submit/
           MONGO_USER: copo_user
