--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,11 +54,8 @@ jobs:
           ENA_V2_SERVICE_SYNC: https://wwwdev.ebi.ac.uk/ena/submit/webin-v2/submit
           ENA_V2_SERVICE_ASYNC: https://wwwdev.ebi.ac.uk/ena/submit/webin-v2/submit/queue
           B2DROP_PERMITS: /copo/b2drop/permits
-        entrypoint:
-          bash
-          -c
-          |
-            rsync -avhW --no-compress --progress --exclude 'media' /code/ /copo/ && rm -rf /code/ &&  python manage.py makemigrations && python manage.py makemigrations allauth  && python manage.py migrate && python manage.py social_accounts && python manage.py setup_groups && python manage.py setup_schemas && python manage.py createcachetable && python manage.py collectstatic --noinput && supervisord -c src/celery.conf && supervisorctl -c src/celery.conf start all && /usr/local/bin/daphne -b 0.0.0.0 -p 8000 src.main_config.asgi:application
+        entrypoint: |
+          rsync -avhW --no-compress --progress --exclude 'media' /code/ /copo/ && rm -rf /code/ &&  python manage.py makemigrations && python manage.py makemigrations allauth  && python manage.py migrate && python manage.py setup_sequencing_centres && python manage.py social_accounts && python manage.py setup_groups && python manage.py setup_schemas && python manage.py createcachetable && python manage.py collectstatic --noinput && supervisord -c src/celery.conf && supervisorctl -c src/celery.conf start all && /usr/local/bin/daphne -b 0.0.0.0 -p 8000 src.main_config.asgi:application
 
       - image: copo/copo-redis:redis-v6.2.6.18
         name: copo_redis
