--- a/test/docker-compose.yaml
+++ b/test/docker-compose.yaml
@@ -52,8 +52,6 @@ services:
       - ENA_V2_SERVICE_SYNC=https://wwwdev.ebi.ac.uk/ena/submit/webin-v2/submit
       - ENA_V2_SERVICE_ASYNC=https://wwwdev.ebi.ac.uk/ena/submit/webin-v2/submit/queue
       - B2DROP_PERMITS=/copo/b2drop/permits
-      - COPO_WEB_USER=${COPO_WEB_USER}
-      - COPO_WEB_USER_PW=${COPO_WEB_USER_PW}
     depends_on:
       - copo_redis
       - copo_postgres
@@ -93,3 +91,17 @@ services:
     image: browserless/chrome
     links:
       - copo_web:copo-new.cyverseuk.org
+    enviorment:
+      - COPO_WEB_USER=${COPO_WEB_USER}
+      - COPO_WEB_USER_PW=${COPO_WEB_USER_PW}
+      - COPO_WEB_URL=http://copo-new.cyverseuk.org:8000/copo
+      - BROWSERLESS_HTTP_URL=http://copo_browser:3000
+      - BROWSERLESS_WS_URL=ws://copo_browser:3000
+      - CHROME_REFRESH_TIME=1800000
+      - CHROME_REFRESH_TIME_RANDOMNESS=10000
+      - CHROME_ARGS=--no-sandbox,--keepalive=30000,--disable-dev-shm-usage,--disable-gpu,--disable-setuid-sandbox,--disable-software-rasterizer,--disable-dev-shm-usage,--disable-accelerated-2d-canvas,--disable-gpu-sandbox,--disable-infobars,--disable-notifications,--disable-extensions,--disable-web-security,--disable-features=IsolateOrigins,site-per-process,--disable-site-isolat
+      - KEEP_ALIVE=true
+      - PREBOOT_CHROME=true
+      - MAX_CONCURRENT_SESSIONS=5
+      - MAX_QUEUE_LENGTH=10
+      - PREBOOT_QUANTITY=2
