--- a/test/docker-compose.yaml
+++ b/test/docker-compose.yaml
@@ -91,7 +91,7 @@ services:
     image: browserless/chrome
     links:
       - copo_web:copo-new.cyverseuk.org
-    enviorment:
+    environment:
       - COPO_WEB_USER=${COPO_WEB_USER}
       - COPO_WEB_USER_PW=${COPO_WEB_USER_PW}
       - COPO_WEB_URL=http://copo-new.cyverseuk.org:8000/copo
