--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,13 +52,15 @@ jobs:
               wait_for_readiness  copo_web 8000
               docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_web) bash -c 'python manage.py makemigrations && python manage.py makemigrations allauth && python manage.py migrate && python manage.py setup_sequencing_centres'
       - run: "docker cp test/testcases/ERGA_SAMPLE_MANIFEST_v2.5_success_several_samples1.xlsx $(docker-compose -f test/docker-compose.yaml ps -q copo_browser):/usr/src/app/workspace/"
-      - run: "docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_browser) node -e $(cat test/testcases/copo-login-logout.js)"
-      - run: "docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_browser) node -e $(cat test/testcases/assign_permission.js)"
-      - run: "docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_browser) node -e $(cat test/testcases/assign_sequencing_center.js)"
-      - run: "docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_browser) node -e $(cat test/testcases/ERGA_profile.js)"
-      - run: "docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_browser) node -e $(cat test/testcases/ERGA_upload_manifest.js)"
-      - run: "docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_browser) node -e $(cat test/testcases/ERGA_approve_samples.js)"
-      - run: "docker logs $(docker-compose -f test/docker-compose.yaml ps -q copo_web)"
+      - run: | 
+          docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_browser) node -e "$(cat test/testcases/copo-login-logout.js)"
+          docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_browser) node -e "$(cat test/testcases/assign_permission.js)"
+          docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_browser) node -e "$(cat test/testcases/assign_sequencing_center.js)"
+          docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_browser) node -e "$(cat test/testcases/ERGA_profile.js)"
+          docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_browser) node -e "$(cat test/testcases/ERGA_upload_manifest.js)"
+          docker exec $(docker-compose -f test/docker-compose.yaml ps -q copo_browser) node -e "$(cat test/testcases/ERGA_approve_samples.js)"
+      - run: |
+          docker logs $(docker-compose -f test/docker-compose.yaml ps -q copo_web)
 
 # Orchestrate jobs using workflows
 # See: https://circleci.com/docs/configuration-reference/#workflows
