--- a/deployment/copo.compose.yaml
+++ b/deployment/copo.compose.yaml
@@ -397,29 +397,44 @@ services:
         reservations:
           cpus: "0.4"
           memory: 512mb
-  browser:
-    image: browserless/chrome
-    networks:
-      - default
-      - copo-frontend-network
-    deploy:
-      replicas: 1
-      endpoint_mode: dnsrr
-      restart_policy:
-        condition: any
-      placement:
-        constraints:
-          - "node.labels.web-service==true"
-      update_config:
-        parallelism: 1
-        delay: 10s
-      resources:
-        limits:
-          cpus: "0.5"
-          memory: 1GB
-        reservations:
-          cpus: "0.3"
-          memory: 512mb
+
+#  browser:
+#    image: browserless/chrome
+#    networks:
+#      - default
+#      - copo-frontend-network
+#    environment:
+#      - COPO_WEB_USER_PW=${COPO_WEB_USER_PW}
+#      - COPO_WEB_USER=${COPO_WEB_USER}
+#      - COPO_WEB_URL=http://copo-new.cyverseuk.org:8000
+#      - BROWSERLESS_HTTP_URL=http://copo_browser:3000
+#      - CHROME_REFRESH_TIME=1800000
+#      - BROWSERLESS_WS_URL=ws://copo_browser:3000
+#      - CHROME_REFRESH_TIME_RANDOMNESS=10000
+#      - CHROME_ARGS=--no-sandbox,--keepalive=30000,--disable-dev-shm-usage,--disable-gpu,--disable-setuid-sandbox,--disable-software-rasterizer,--disable-dev-shm-usage,--disable-accelerated-2d-canvas,--disable-gpu-sandbox,--disable-infobars,--disable-notifications,--disable-extensions,--disable-web-security,--disable-features=IsolateOrigins,site-per-process,--disable-site-isolat
+#      - KEEP_ALIVE=true
+#      - MAX_CONCURRENT_SESSIONS=5
+#      - PREBOOT_CHROME=true
+#      - MAX_QUEUE_LENGTH=10
+#      - PREBOOT_QUANTITY=2      
+#    deploy:
+#      replicas: 1
+#      endpoint_mode: dnsrr
+#      restart_policy:
+#        condition: any
+#      placement:
+#        constraints:
+#          - "node.labels.web-service==true"
+#      update_config:
+#        parallelism: 1
+#        delay: 10s
+#      resources:
+#        limits:
+#          memory: 1GB
+#          cpus: "0.5"
+#        reservations:
+#          cpus: "0.3"
+#          memory: 512mb
 networks:
   copo-backend-network:
     external: true
